--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
             winning an award for their prototype.<sup>16</sup> Another significant event was his judging a 
             science day in APEC, which he was proud of due to his project being highlighted by 
             other groups. He discovered his strengths and passions in his high school years.<sup>17</sup> The 
-            transition from a small elementary school made his life change.<sup>18</sup> He learned to adapt to 
-            different environments: resilience, growth, and optimism.<sup>19</sup></blockquote></blockquote></p>
+            transition from a small elementary school made his life change.<sup>18</sup> Nonetheless, without the guidance of his parents,
+            his live would've gone downhill. <sup>19</sup>He learned to adapt to 
+            different environments: resilience, growth, and optimism.<sup>20</sup></blockquote></blockquote></p>
     </div>
 
     <div align="center">
