--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </p>
             </div>
             <div class="image-content">
-                <img src="img/DSC03311.jpg" alt="Aaron's photo" class="styled-image" target="self">
+                <img src="img/main-image.jpg" alt="Aaron's photo" class="styled-image" target="self">
             </div>
         </section>
 
