--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -138,9 +138,43 @@
                         </a>
                         <p>University of the East</p>
                     </div>
-                    
                 </div>
             </div>
+
+            <div class="category">
+                <h3>Other Photos</h3>
+                <div class="photo-gallery-grid">
+                    <div class="photo-gallery-item">
+                        <a href="img/other/other1.jpg" target="_self">
+                            <img src="img/other/other1.jpg" alt="Other photo 1" title="Other photo 1">
+                        </a>
+                        <p>Other photo 1</p>
+                    </div>
+                    <div class="photo-gallery-item">
+                        <a href="img/other/other2.jpg" target="_self">
+                            <img src="img/other/other2.jpg" alt="Other photo 2" title="Other photo 2">
+                        </a>
+                        <p>Other photo 2</p>
+                    </div>
+                    <div class="photo-gallery-item">
+                        <a href="img/other/other3.jpg" target="_self">
+                            <img src="img/other/other3.jpg" alt="Other photo 3" title="Other photo 3">
+                        </a>
+                        <p>Other photo 3</p>
+                    </div>
+                    <div class="photo-gallery-item">
+                        <a href="img/other/other4.jpg" target="_self">
+                            <img src="img/other/other4.jpg" alt="Other photo 4" title="Other photo 4">
+                        </a>
+                        <p>Other photo 4</p>
+                    </div>
+                    <div class="photo-gallery-item">
+                        <a href="img/other/other5.jpg" target="_self">
+                            <img src="img/other/other5.jpg" alt="Other photo 5" title="Other photo 5">
+                        </a>
+                        <p>Other photo 5</p>
+                    </div>
+                </div>
         </section>
     </main>
 
