--- a/skills.html
+++ b/skills.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=DM Sans' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=EB Garamond' rel='stylesheet'>
-    <title>Aaron's Skills, Hobbies, Interests, and Contacts</title>
+    <title>Skills - Aaron's Porfolio</title>
 </head>
 <body>
     <header>
