--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -34,31 +34,31 @@
                 <h3>Childhood Years</h3>
                 <div class="photo-gallery-grid">
                     <div class="photo-gallery-item">
-                        <a href="img/childhood/ch_photo1.jpg" target="_self">
+                        <a href="img/childhood/ch_photo1.jpg" target="_blank">
                             <img src="img/childhood/ch_photo1.jpg" alt="Childhood photo 1" title="Childhood photo 1">
                         </a>
                         <p>Childhood photo 1</p>
                     </div>
                     <div class="photo-gallery-item">
-                        <a href="img/childhood/ch_photo2.jpg" target="_self">
+                        <a href="img/childhood/ch_photo2.jpg" target="_blank">
                             <img src="img/childhood/ch_photo2.jpg" alt="Childhood photo 2" title="Childhood photo 2">
                         </a>
                         <p>Childhood photo 2</p>
                     </div>
                     <div class="photo-gallery-item">
-                        <a href="img/childhood/ch_photo3.jpg" target="_self">
+                        <a href="img/childhood/ch_photo3.jpg" target="_blank">
                             <img src="img/childhood/ch_photo3.jpg" alt="Childhood photo 3" title="Childhood photo 3">
                         </a>
                         <p>Childhood photo 3</p>
                     </div>
                     <div class="photo-gallery-item">
-                        <a href="img/childhood/ch_photo4.jpg" target="_self">
+                        <a href="img/childhood/ch_photo4.jpg" target="_blank">
                             <img src="img/childhood/ch_photo4.jpg" alt="Childhood photo 4" title="Childhood photo 4">
                         </a>
                         <p>Childhood photo 4</p>
                     </div>
                     <div class="photo-gallery-item">
-                        <a href="img/childhood/ch_photo5.jpg" target="_self">
+                        <a href="img/childhood/ch_photo5.jpg" target="_blank">
                             <img src="img/childhood/ch_photo5.jpg" alt="Childhood photo 5" title="Childhood photo 5">
                         </a>
                         <p>Childhood photo 5</p>
@@ -71,31 +71,31 @@
                 <h3>Teenage Years</h3>
                 <div class="photo-gallery-grid">
                     <div class="photo-gallery-item">
-                        <a href="img/teenage/teenage1.jpg" target="_self">
+                        <a href="img/teenage/teenage1.jpg" target="_blank">
                             <img src="img/teenage/teenage1.jpg" alt="Research Group and Achivements" title="High school event">
                         </a>
                         <p>Arduino Research Group</p>
                     </div>
                     <div class="photo-gallery-item">
-                        <a href="img/teenage/teenage2.jpg" target="_self">
+                        <a href="img/teenage/teenage2.jpg" target="_blank">
                             <img src="img/teenage/teenage2.jpg" alt="Me in Senior High" title="Self in SHS">
                         </a>
                         <p>High-School event</p>
                     </div>
                     <div class="photo-gallery-item">
-                        <a href="img/teenage/teenage3.jpg" target="_self">
+                        <a href="img/teenage/teenage3.jpg" target="_blank">
                             <img src="img/teenage/teenage3.jpg" alt="High School Music Event" title="Himig ng Pagibig">
                         </a>
                         <p>Music Event</p>
                     </div>
                     <div class="photo-gallery-item">
-                        <a href="img/teenage/teenage4.jpg" target="_self">
+                        <a href="img/teenage/teenage4.jpg" target="_blank">
                             <img src="img/teenage/teenage4.jpg" alt="High school friends" title="High school friends">
                         </a>
                         <p>High school friends</p>
                     </div>
                     <div class="photo-gallery-item">
-                        <a href="img/teenage/teenage5.jpg" target="_self">
+                        <a href="img/teenage/teenage5.jpg" target="_blank">
                             <img src="img/teenage/teenage5.jpg" alt="High school graduation" title="High school graduation">
                         </a>
                         <p>High school graduation</p>
@@ -109,31 +109,31 @@
                 <h3>College Years</h3>
                 <div class="photo-gallery-grid">
                     <div class="photo-gallery-item">
-                        <a href="img/college/college1.jpg" target="_self">
+                        <a href="img/college/college1.jpg" target="_blank">
                             <img src="img/college/college1.jpg" alt="UE Friends" title="University of the East">
                         </a>
                         <p>UE Friends</p>
                     </div>
                     <div class="photo-gallery-item">
-                        <a href="img/college/college2.jpg" target="_self">
+                        <a href="img/college/college2.jpg" target="_blank">
                             <img src="img/college/college2.png" alt="C# Programming" title="Programming project">
                         </a>
                         <p>C# Programming</p>
                     </div>
                     <div class="photo-gallery-item">
-                        <a href="img/college/college3.jpg" target="_self">
+                        <a href="img/college/college3.jpg" target="_blank">
                             <img src="img/college/college3.jpg" alt="UE Jam Sessions - Manila" title="Jam Sessions Manila">
                         </a>
                         <p>UE - Jam Sessions Manila</p>
                     </div>
                     <div class="photo-gallery-item">
-                        <a href="img/college/college4.png" target="_self">
+                        <a href="img/college/college4.png" target="_blank">
                             <img src="img/college/college4.png" alt="Game Development" title="Game development">
                         </a>
                         <p>Game Development</p>
                     </div>
                     <div class="photo-gallery-item">
-                        <a href="img/college/college5.png" target="_self">
+                        <a href="img/college/college5.png" target="_blank">
                             <img src="img/college/college5.png" alt="University of the East" title="UE">
                         </a>
                         <p>University of the East</p>
@@ -145,31 +145,31 @@
                 <h3>Other Photos</h3>
                 <div class="photo-gallery-grid">
                     <div class="photo-gallery-item">
-                        <a href="img/other/other1.jpg" target="_self">
+                        <a href="img/other/other1.jpg" target="_blank">
                             <img src="img/other/other1.jpg" alt="Other photo 1" title="Other photo 1">
                         </a>
                         <p>Other photo 1</p>
                     </div>
                     <div class="photo-gallery-item">
-                        <a href="img/other/other2.jpg" target="_self">
+                        <a href="img/other/other2.jpg" target="_blank">
                             <img src="img/other/other2.jpg" alt="Other photo 2" title="Other photo 2">
                         </a>
                         <p>Other photo 2</p>
                     </div>
                     <div class="photo-gallery-item">
-                        <a href="img/other/other3.jpg" target="_self">
+                        <a href="img/other/other3.jpg" target="_blank">
                             <img src="img/other/other3.jpg" alt="Other photo 3" title="Other photo 3">
                         </a>
                         <p>Other photo 3</p>
                     </div>
                     <div class="photo-gallery-item">
-                        <a href="img/other/other4.jpg" target="_self">
+                        <a href="img/other/other4.jpg" target="_blank">
                             <img src="img/other/other4.jpg" alt="Other photo 4" title="Other photo 4">
                         </a>
                         <p>Other photo 4</p>
                     </div>
                     <div class="photo-gallery-item">
-                        <a href="img/other/other5.jpg" target="_self">
+                        <a href="img/other/other5.jpg" target="_blank">
                             <img src="img/other/other5.jpg" alt="Other photo 5" title="Other photo 5">
                         </a>
                         <p>Other photo 5</p>
