Updated all files

--- a/my-beats.html
+++ b/my-beats.html
@@ -15,12 +15,14 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">HOME</a></li>
                 <li><a href="biography.html">BIOGRAPHY</a></li>
                 <li><a href="resume.html">RESUME</a></li>
                 <li><a href="skills.html">SKILLS</a></li>
-                <li><a href="photos.html">PHOTOS</a></li>
-                <li><a href="media.html">MEDIA</a></li>
+                <li><a href="photo-gallery.html">PHOTOS</a></li>
+                <li><a href="my-beats.html">BEATS</a></li>
+                <li><a href="my-kind-of-film.html">FILMS</a></li>
+                <li><a href="places.html">PLACES</a></li>
+                <li><a href="bucket-list.html">BUCKET LIST</a></li>
                 <li><a href="contacts.html">CONTACTS</a></li>
             </ul>
         </nav>
@@ -28,7 +30,7 @@
     
     <main>
         <section id="my-beat" class="my-beat">
-            <h2>My Beats</h2>
+            <h2 style="text-align: center;">My Beats</h2>
             
             <div class="category">
                 <h3>Rap</h3>
@@ -38,18 +40,24 @@
                         <audio controls>
                             <source src="audio/phases.mp3" type="audio/mpeg">
                         </audio>
+                        <h4>Chase Atlantic - Phases</h4>
+                        <p>Phases is the third studio album by Australian alternative band Chase Atlantic, released on 7 June 2019.</p>
                     </div>
                     <div class="audio-item">
                         <img src="img/albums/rap2.png" alt="Bone Thugs N Harmony" title="BTH">
                         <audio controls>
                             <source src="audio/bth.mp3" type="audio/mpeg">
                         </audio>
+                        <h4>Bone Thugs N Harmony - Crossroads </h4>
+                        <p>Crossroads is a song by American hip hop group Bone Thugs-n-Harmony. It was released in May 1996 as the third single from their second studio album, E. 1999 Eternal.</p>
                     </div>
                     <div class="audio-item">
                         <img src="img/albums/rap3.png" alt="Kendrick Lamar" title="Luther">
                         <audio controls>
                             <source src="audio/luther.mp3" type="audio/mpeg">
                         </audio>
+                        <h4>Kendrick Lamar - Luther</h4>
+                        <p>Luther is the 3rd track on Kendrick Lamar’s 6th studio album, and was later made the 3rd single from GNX. it marks the 5th collaboration between him and long-time close friend, SZA. The song’s name “luther” originates from the heavily sampled track “If This World Were Mine” by Luther Vandross.</p>
                     </div>
                 </div>
             </div>
@@ -62,18 +70,24 @@
                         <audio controls>
                             <source src="audio/highopes.mp3" type="audio/mpeg">
                         </audio>
+                        <h4>Panic! At The Disco - High Hopes</h4>
+                        <p>High Hopes is a song by American pop rock band Panic! at the Disco. It was released on May 23, 2018, through Fueled by Ramen as the second single from their sixth studio album, Pray for the Wicked (2018).</p>
                     </div>
                     <div class="audio-item">
                         <img src="img/albums/punk2.png" alt="Infinity on High" title="Fallout Boy">
                         <audio controls>
                             <source src="audio/fob.mp3" type="audio/mpeg">
                         </audio>
+                        <h4>Don’t You Know Who I Think I Am? - Fall Out Boy</h4>
+                        <p>“Don’t You Know Who I Think I Am” is the first song that lead singer Patrick Stump ever co-produced on behalf of Fall Out Boy.</p>
                     </div>
                     <div class="audio-item">
                         <img src="img/albums/punk3.png" alt="ATL" title="All time Low">
                         <audio controls>
                             <source src="audio/atl.mp3" type="audio/mpeg">
                         </audio>
+                        <h4>Dear Maria, Count Me In - All Time Low</h4>
+                        <p>Dear Maria, Count Me In is a song by American rock band All Time Low. The song is the second single taken from their second studio album So Wrong, It's Right.</p>
                     </div>
                 </div>
             </div>
@@ -86,18 +100,24 @@
                         <audio controls>
                             <source src="audio/1975.mp3" type="audio/mpeg">
                         </audio>
+                        <h4>It's Not Living - The 1975</h4>
+                        <p>“It’s Not Living (If It’s Not with You)” is an upbeat song that depicts Matty Healy’s struggle with heroin addiction.</p>
                     </div>
                     <div class="audio-item">
                         <img src="img/albums/pop2.png" alt="Ariana Grande" title="Ariana">
                         <audio controls>
                             <source src="audio/ag.mp3" type="audio/mpeg">
                         </audio>
+                        <h4>Break Free - Ariana Grande, ZEDD</h4>
+                        <p>"Break Free" is a song by American singer Ariana Grande, featuring Russian-German music producer Zedd. </p>
                     </div>
                     <div class="audio-item">
                         <img src="img/albums/pop3.png" alt="Chappell Roan" title="Chappell Roan">
                         <audio controls>
                             <source src="audio/ppc.mp3" type="audio/mpeg">
                         </audio>
+                        <h4>Pink Pony Club - Chappell Roan</h4>
+                        <p>Pink Pony Club" is a song by the American singer and songwriter Chappell Roan. It was released through Atlantic Records on April 3, 2020, and later included on her debut album The Rise and Fall of a Midwest Princess (2023). </p>
                     </div>
                 </div>
             </div>
