--- a/resume.html
+++ b/resume.html
@@ -15,12 +15,14 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">HOME</a></li>
                 <li><a href="biography.html">BIOGRAPHY</a></li>
                 <li><a href="resume.html">RESUME</a></li>
                 <li><a href="skills.html">SKILLS</a></li>
-                <li><a href="photos.html">PHOTOS</a></li>
-                <li><a href="media.html">MEDIA</a></li>
+                <li><a href="photo-gallery.html">PHOTOS</a></li>
+                <li><a href="my-beats.html">BEATS</a></li>
+                <li><a href="my-kind-of-film.html">FILMS</a></li>
+                <li><a href="places.html">PLACES</a></li>
+                <li><a href="bucket-list.html">BUCKET LIST</a></li>
                 <li><a href="contacts.html">CONTACTS</a></li>
             </ul>
         </nav>
@@ -48,6 +50,23 @@
                     <li>Knowledgeable in Java</li>
                     <li>Proficient in Python</li>
                 </ol>
+                <p>Databases</p>
+                <ol>
+                    <li>MySQL Server</li>
+                    <li>SQLite</li>
+                    <li>MongoDB</li>
+                </ol>
+                <p>Game Development</p>
+                <ol>
+                    <li>Monogame Framework (Currently studying)</li>
+                </ol>
+                <p>Web Development</p>
+                <ol>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>Angular (Currently studying)</li>
+                    <li>Tailwind CSS (Currently studying)</li>
             </div>
             <div class="work-experiences box">
                 <h3>Work Experiences</h3>
@@ -61,8 +80,8 @@
             <div class="educational-attainment box">
                 <h3>Educational Attainment</h3>
                 <ol>
-                    <li>High School: APEC Schools Marikina Heights 2017-2022</li>
-                    <li>College: University of the East - Manila 2022 - Present</li>
+                    <li>High School: APEC Schools Marikina Heights 2017-2023</li>
+                    <li>College: University of the East - Manila 2023 - Present</li>
                 </ol>
             </div>
             <div class="skills-training-seminars box">
@@ -70,7 +89,10 @@
                 <ol>
                     <li>Cybersecurity Seminar (CCSS R&D)</li>
                     <li>Github Seminar (CCSS R&D)</li>
-                    <li>Marketing Seminar</li>
+                    <li>Marketing Seminar (IJMA)</li>
+                    <li>Current AI Technologies and Practical Applications (CCSS R&D)</li>
+                    <li>Bit by Bit: Powering through the Battery Exam (CCSS R&D)</li>
+                    <li>Neural Networks 101: Building the Brains of AI (CCSS R&D)</li>
                 </ol>
             </div>
             <div class="hobbies-interests box">
@@ -83,9 +105,10 @@
             </div>
         </section>
     </main>
-    
-    <a href="index.html" id="homeBtn" class="floating-btn">Home</a>
+
     <a href="#top" id="goTopBtn" class="floating-btn">Go to Top</a>
+    <a href="index.html" id="homeBtn" class="floating-btn">Home</a>
+    
     <footer>
         <p>&copy; 2025 Aaron Carl Arevalo, University of the East. All rights reserved.</p>
     </footer>
