--- a/biography.html
+++ b/biography.html
@@ -15,12 +15,14 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">HOME</a></li>
                 <li><a href="biography.html">BIOGRAPHY</a></li>
                 <li><a href="resume.html">RESUME</a></li>
                 <li><a href="skills.html">SKILLS</a></li>
-                <li><a href="photos.html">PHOTOS</a></li>
-                <li><a href="media.html">MEDIA</a></li>
+                <li><a href="photo-gallery.html">PHOTOS</a></li>
+                <li><a href="my-beats.html">BEATS</a></li>
+                <li><a href="my-kind-of-film.html">FILMS</a></li>
+                <li><a href="places.html">PLACES</a></li>
+                <li><a href="bucket-list.html">BUCKET LIST</a></li>
                 <li><a href="contacts.html">CONTACTS</a></li>
             </ul>
         </nav>
@@ -58,17 +60,17 @@
                         years were a period of self-growth filled with new experiences and lessons.
                     </p>
                     <div class="gallery">
-                        <a href="img/childhood/ch_photo1.jpg" target="_self">
-                            <img src="img/childhood/ch_photo1.jpg" alt="Childhood photo 1" title="Childhood photo 1">
+                        <a href="img/childhood/ch_photo1.png" target="_display">
+                            <img src="img/childhood/ch_photo1.png" alt="Childhood photo 1" title="Childhood photo 1">
                         </a>
-                        <a href="img/childhood/ch_photo2.jpg" target="_self">
-                            <img src="img/childhood/ch_photo2.jpg" alt="Childhood photo 2" title="Childhood photo 2">
+                        <a href="img/childhood/ch_photo2.png" target="_display">
+                            <img src="img/childhood/ch_photo2.png" alt="Childhood photo 2" title="Childhood photo 2">
                         </a>
-                        <a href="img/childhood/ch_photo3.jpg" target="_self">
-                            <img src="img/childhood/ch_photo3.jpg" alt="Childhood photo 3" title="Childhood photo 3">
+                        <a href="img/childhood/ch_photo3.png" target="_display">
+                            <img src="img/childhood/ch_photo3.png" alt="Childhood photo 3" title="Childhood photo 3">
                         </a>
-                        <a href="img/childhood/ch_photo4.jpg" target="_self">
-                            <img src="img/childhood/ch_photo4.jpg" alt="Childhood photo 4" title="Childhood photo 4">
+                        <a href="img/childhood/ch_photo4.png" target="_display">
+                            <img src="img/childhood/ch_photo4.png" alt="Childhood photo 4" title="Childhood photo 4">
                         </a>
                     </div>
                 </div>
@@ -101,17 +103,17 @@
                         different environments: resilience, growth, and optimism.
                     </p>
                     <div class="gallery">
-                        <a href="img/teenage/teenage1.jpg" target="_self">
-                            <img src="img/teenage/teenage1.jpg" alt="Research Event and Achievement" title="High school event">
+                        <a href="img/teenage/teenage1.png" target="_display">
+                            <img src="img/teenage/teenage1.png" alt="Research Event and Achievement" title="High school event">
                         </a>
-                        <a href="img/teenage/teenage2.jpg" target="_self">
-                            <img src="img/teenage/teenage2.jpg" alt="Picture of Me" title="Research group">
+                        <a href="img/teenage/teenage2.png" target="_display">
+                            <img src="img/teenage/teenage2.png" alt="Picture of Me" title="Research group">
                         </a>
-                        <a href="img/teenage/teenage3.jpg" target="_self">
-                            <img src="img/teenage/teenage3.jpg" alt="Music Event" title="Science day">
+                        <a href="img/teenage/teenage3.png" target="_display">
+                            <img src="img/teenage/teenage3.png" alt="Music Event" title="Science day">
                         </a>
-                        <a href="img/teenage/teenage4.jpg" target="_self">
-                            <img src="img/teenage/teenage4.jpg" alt="Research Event" title="High school friends">
+                        <a href="img/teenage/teenage4.png" target="_display">
+                            <img src="img/teenage/teenage4.png" alt="Research Event" title="High school friends">
                         </a>
                     </div>
                 </div>
@@ -143,17 +145,17 @@
                         everything is falling apart. He just has one motto in life. "All things come to an end".
                     </p>
                     <div class="gallery">
-                        <a href="img/college/college1.jpg" target="_self">
-                            <img src="img/college/college1.jpg" alt="UE Friends" title="University of the East">
+                        <a href="img/college/college1.png" target="_display">
+                            <img src="img/college/college1.png" alt="Powhiri: X Concert" title="Concert">
                         </a>
-                        <a href="img/college/college2.png" target="_self">
-                            <img src="img/college/college2.png" alt="C# Programming" title="Programming project">
+                        <a href="img/college/college2.png" target="_display">
+                            <img src="img/college/college2.png" alt="UE Jam Sessions - Vice Presidency" title="UEJS Vice President">
                         </a>
-                        <a href="img/college/college3.jpg" target="_self">
-                            <img src="img/college/college3.jpg" alt="UE Jam Sessions - Manila" title="Jam Sessions Manila">
+                        <a href="img/college/college3.jpg" target="_display">
+                            <img src="img/college/college3.png" alt="UE Friends" title="UE Friends">
                         </a>
-                        <a href="img/college/college4.png" target="_self">
-                            <img src="img/college/college4.png" alt="Game Development" title="Game development">
+                        <a href="img/college/college4.png" target="_display">
+                            <img src="img/college/college4.png" alt="C# Programming" title="Programming">
                         </a>
                     </div>
                 </div>
@@ -162,7 +164,7 @@
     </main>
 
     <a href="index.html" id="homeBtn" class="floating-btn">Home</a>
-    <a href="#top" id="goTopBtn" class="floating-btn">Go to Top</a>
+
     <footer>
         <p>&copy; 2025 Aaron Carl Arevalo, University of the East. All rights reserved.</p>
     </footer>
