--- a/biography.html
+++ b/biography.html
@@ -107,13 +107,13 @@
                             <img src="img/teenage/teenage1.png" alt="Research Event and Achievement" title="High school event">
                         </a>
                         <a href="img/teenage/teenage2.png" target="_display">
-                            <img src="img/teenage/teenage2.png" alt="Picture of Me" title="Research group">
+                            <img src="img/teenage/teenage2.png" alt="Picture of Me" title="Debut Attendee">
                         </a>
                         <a href="img/teenage/teenage3.png" target="_display">
-                            <img src="img/teenage/teenage3.png" alt="Music Event" title="Science day">
+                            <img src="img/teenage/teenage3.png" alt="Music Event" title="Himig ng Pagibig (SHS)">
                         </a>
                         <a href="img/teenage/teenage4.png" target="_display">
-                            <img src="img/teenage/teenage4.png" alt="Research Event" title="High school friends">
+                            <img src="img/teenage/teenage4.png" alt="Research Event" title="Arduino (SHS)">
                         </a>
                     </div>
                 </div>
@@ -151,11 +151,11 @@
                         <a href="img/college/college2.png" target="_display">
                             <img src="img/college/college2.png" alt="UE Jam Sessions - Vice Presidency" title="UEJS Vice President">
                         </a>
-                        <a href="img/college/college3.jpg" target="_display">
-                            <img src="img/college/college3.png" alt="UE Friends" title="UE Friends">
+                        <a href="img/college/college3.png" target="_display">
+                            <img src="img/college/college3.png" alt="UE Friends" title="CCSS Week">
                         </a>
                         <a href="img/college/college4.png" target="_display">
-                            <img src="img/college/college4.png" alt="C# Programming" title="Programming">
+                            <img src="img/college/college4.png" alt="UEJS Friends" title="UE Jam Sessions - Friends">
                         </a>
                     </div>
                 </div>
