--- a/biography.html
+++ b/biography.html
@@ -104,7 +104,7 @@
                     </p>
                     <div class="gallery">
                         <a href="img/teenage/teenage1.png" target="_display">
-                            <img src="img/teenage/teenage1.png" alt="Research Event and Achievement" title="High school event">
+                            <img src="img/teenage/teenage1.png" alt="Research Event and Achievement" title="Research Event">
                         </a>
                         <a href="img/teenage/teenage2.png" target="_display">
                             <img src="img/teenage/teenage2.png" alt="Picture of Me" title="Debut Attendee">
@@ -151,11 +151,11 @@
                         <a href="img/college/college2.png" target="_display">
                             <img src="img/college/college2.png" alt="UE Jam Sessions - Vice Presidency" title="UEJS Vice President">
                         </a>
-                        <a href="img/college/college3.png" target="_display">
-                            <img src="img/college/college3.png" alt="UE Friends" title="CCSS Week">
+                        <a href="img/college/college3.jpg" target="_display">
+                            <img src="img/college/college3.png" alt="UE Friends" title="UE Friends">
                         </a>
                         <a href="img/college/college4.png" target="_display">
-                            <img src="img/college/college4.png" alt="UEJS Friends" title="UE Jam Sessions - Friends">
+                            <img src="img/college/college4.png" alt="C# Programming" title="Programming">
                         </a>
                     </div>
                 </div>
