--- a/ger.html
+++ b/ger.html
@@ -15,11 +15,19 @@
     <main>
         <section class="place-details">
             <h2>Why Berlin is Special</h2>
-            <p>Berlin is a city steeped in history, known for its art scene, historic landmarks, and vibrant culture. Berlin is famous for its many museums such as the Dahlem Museums, the Egyptian Museum, the Berlin Cultural Forum with the New National Gallery, and the Museum of Arts and Crafts. Other postwar institutions are the Brücke-Museum, the Berlin Museum, the Museum of Transport and Technology, and the Jewish Museum Berlin.</p>
+            <p>Berlin is a city steeped in history, known for its art scene, historic landmarks, and vibrant culture. Berlin is famous for its many museums such as the Dahlem Museums, the Egyptian Museum, the Berlin Cultural Forum with the New National Gallery, and the Museum of Arts and Crafts. Other postwar institutions are the Brücke-Museum, the Berlin Museum, the Museum of Transport and Technology, and the Jewish Museum Berlin.
+                I would love to visit Berlin due to my interest in history and culture. I would love to visit the Berlin Wall Memorial, the Brandenburg Gate, and the Reichstag Building. I would also love to explore the city's many museums and art galleries.
+            </p>
         </section>
         <section class="place-details">
             <h2>How to Get There</h2>
-            <p>Fly to Berlin Brandenburg Airport, then take public transport to the city center.</p>
+            <p>Fly to Berlin Brandenburg Airport, then take public transport to the city center. Airlines: Several major airlines offer flights from Manila (Ninoy Aquino International Airport - MNL) to Berlin (Berlin Brandenburg Airport - BER), including Qatar Airways, Turkish Airlines, Etihad Airways, Lufthansa, and others.
+                <li>Train</li>
+                <li>Bus</li>
+                <li>Taxi</li>
+                <li>Subway</li>
+                <li>Private Vehicle</li>
+            </p>
         </section>
         <section class="place-details">
             <h2>Other Places to Visit</h2>
