--- a/japan.html
+++ b/japan.html
@@ -14,12 +14,20 @@
     </header>
     <main>
         <section class="place-details">
-            <h2>Why Osaka is Special</h2>
-            <p>Osaka is famous for its modern architecture, vibrant nightlife, and delicious street food. It's also home to the iconic Osaka Castle. Osaka, Japan, is known for its vibrant street food scene, historic landmarks like Osaka Castle, lively entertainment districts such as Dotonbori, and its rich cultural heritage, including traditional performing arts like Bunraku puppet theater. Additionally, it's a major economic and commercial hub in Japan.</p>
+            <h2>Why Osaka is Special to Me?</h2>
+            <p>Osaka is famous for its modern architecture, vibrant nightlife, and delicious street food. It's also home to the iconic Osaka Castle. Osaka, Japan, is known for its vibrant street food scene, historic landmarks like Osaka Castle, lively entertainment districts such as Dotonbori, and its rich cultural heritage, including traditional performing arts like Bunraku puppet theater. Additionally, it's a major economic and commercial hub in Japan. 
+                I would love to visit Japan due to my likings in Anime, Food, and Culture. I would love to visit the Osaka Castle, Universal Studios Japan, and the Osaka Aquarium. I would also love to try the local street food and experience the vibrant nightlife in the city.</p>
+            </p>
         </section>
         <section class="place-details">
-            <h2>How to Get There</h2>
-            <p>Fly to Kansai International Airport, then take a train to Osaka city center.</p>
+            <h2>How to Get There?</h2>
+            <p>Fly to Kansai International Airport, then take a train to Osaka city center. Several airlines offer direct flights from major cities in the Philippines, such as Manila and Cebu, to various airports in Japan, including Narita (NRT) and Haneda (HND) in Tokyo, as well as Kansai International Airport (KIX) in Osaka. The average flight time is around 4 to 5 hours.
+                <li>JR Haruka Limited Express</li>
+                <li>Nankai Airport Express</li>
+                <li>Taxi</li>
+                <li>Bus</li>
+                <li>Private Vehicles</li>
+            </p>
         </section>
         <section class="place-details">
             <h2>Other Places to Visit</h2>
