--- a/malay.html
+++ b/malay.html
@@ -15,11 +15,20 @@
     <main>
         <section class="place-details">
             <h2>Why Kuala Lumpur is Special</h2>
-            <p>Kuala Lumpur is known for its iconic Petronas Twin Towers, bustling markets, and diverse food scene. The capital of Malaysia is widely recognized for numerous landmarks, including Petronas Twin Towers (twin skyscrapers with a sky bridge and observation deck), the Petaling Street flea market, and Batu Caves, which is over 400 million years old.</p>
+            <p>Kuala Lumpur is known for its iconic Petronas Twin Towers, bustling markets, and diverse food scene. The capital of Malaysia is widely recognized for numerous landmarks, including Petronas Twin Towers (twin skyscrapers with a sky bridge and observation deck), the Petaling Street flea market, and Batu Caves, which is over 400 million years old. 
+                Malaysia will always be special to me since the country is our neighbor. I also have some malaysian friends online.
+            </p>
         </section>
         <section class="place-details">
             <h2>How to Get There</h2>
-            <p>Fly to Kuala Lumpur International Airport, then take a train or taxi to the city center.</p>
+            <p>Fly to Kuala Lumpur International Airport, then take a train or taxi to the city center. Several airlines offer direct flights from major cities in the Philippines, such as Manila, Cebu, and Davao, to Kuala Lumpur International Airport (KUL).
+                <li>KLIA Ekspres Train</li>
+                <li>KLIA Transit Train</li>
+                <li>Bus</li>
+                <li>Taxi</li>
+                <li>Private Vehicle</li>
+                <li>GRAB</li>
+            </p>
         </section>
         <section class="place-details">
             <h2>Other Places to Visit</h2>
