--- a/my-kind-of-film.html
+++ b/my-kind-of-film.html
@@ -117,7 +117,7 @@
     <a href="#top" id="goTopBtn" class="floating-btn">Go to Top</a>
     <a href="index.html" id="homeBtn" class="floating-btn">Home</a>
     <footer>
-        <p>&copy; 2025 Aaron Carl Arevalo, University of the East. All rights reserved.</p>
+        <p>&copy; 2025 Aaron Carl Arevalo. All rights reserved.</p>
     </footer>
 </body>
 </html>
