--- a/places.html
+++ b/places.html
@@ -34,10 +34,10 @@
             <div class="image-map-container">
                 <img src="img/places-images.png" alt="Dream Places" usemap="#world-map">
                 <map name="world-map">
-                    <area shape="rect" coords="70,53,688,293" alt="South Korea" href="sk.html" title="Seoul, South Korea" target="_display">
-                    <area shape="rect" coords="70,333,388,648" alt="Japan" href="japan.html" title="Osaka, Japan" target="_display">
-                    <area shape="poly" coords="598,337,472,397,441,527,526,641,668,641,753,533,725,533" alt="Germany" href="ger.html" title="Berlin, Germany" target="_display">
-                    <area shape="circle" coords="1030,360,225" alt="Malaysia" href="malay.html" title="Kuala Lumpur, Malaysia" target="_display">
+                    <area shape="rect" coords="70,64, 688 304" alt="South Korea" href="sk.html" title="Seoul, South Korea" target="_display">
+                    <area shape="poly" coords="269, 393, 190, 434, 319, 427, 179, 484, 336, 468, 153, 516, 360, 503, 142, 551, 389, 533, 382, 562, 253, 563" alt="Japan" href="japan.html" title="Osaka, Japan" target="_display">
+                    <area shape="rect" coords="906, 252, 1106, 345" alt="Germany" href="ger.html" title="Berlin, Germany" target="_display">
+                    <area shape="circle" coords="683, 518, 158" alt="Malaysia" href="malay.html" title="Kuala Lumpur, Malaysia" target="_display">
                 </map>
             </div>
         </section>
