--- a/sk.html
+++ b/sk.html
@@ -14,12 +14,21 @@
     </header>
     <main>
         <section class="place-details">
-            <h2>Why Seoul is Special</h2>
-            <p>Seoul is a vibrant city that blends modern skyscrapers with traditional palaces and temples. It's known for its rich culture, delicious food, and bustling shopping districts. Seoul was named the World Design Capital in 2010 and has served as the national hub for the music, entertainment, and cultural industries that have propelled K-pop and the Korean Wave to international prominence.</p>
+            <h2>Why Seoul is Special To Me?</h2>
+            <p>Seoul is a vibrant city that blends modern skyscrapers with traditional palaces and temples.
+                 It's known for its rich culture, delicious food, and bustling shopping districts. Seoul was named the World Design Capital in 2010 and has served as the national hub for the music, entertainment, and cultural industries that have propelled K-pop and the Korean Wave to international prominence.
+                Since I love K-dramas and Korean Pop, Seoul would be one of my go to places to be in.</p>
         </section>
         <section class="place-details">
-            <h2>How to Get There</h2>
-            <p>Fly to Incheon International Airport, then take a train or bus to Seoul.</p>
+            <h2>How to Get There?</h2>
+            <p>Fly to Incheon International Airport, then take a train or bus to Seoul. 
+                Direct Flights: This is the most convenient and fastest option. Several airlines offer direct flights from Manila (Ninoy Aquino International Airport - MNL) to Seoul (Incheon International Airport - ICN). The flight duration is approximately 3 hours and 35 minutes to 4 hours and 20 minutes.
+                <li>Airport Railroad Express (AREX)</li>
+                <li>Airport Limousine Bus</li>
+                <li>Taxi</li>
+                <li>Subway</li>
+                <li>Private Vehicle</li>
+            </p>
         </section>
         <section class="place-details">
             <h2>Other Places to Visit</h2>
@@ -49,7 +58,7 @@
             <a href="places.html" class="back-button">Go Back</a>
         </div>
 
-        
+
     </main>
 </body>
 </html>
